--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>Booth</title>
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title></title>
+  <script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
 </head>
 
 <body>
@@ -15,5 +16,4 @@
   </noscript>
   <div id="app"></div>
 </body>
-
 </html>
