--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title></title>
   <script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
+  <!-- <script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-x.x.x.min.js"></script> -->
 </head>
 
 <body>
